[gd_scene load_steps=16 format=3 uid="uid://8d7lx82ts0ee"]

[ext_resource type="Script" path="res://src/UI/game_screen.gd" id="1_3i20e"]
[ext_resource type="PackedScene" uid="uid://gq31pe1i22pf" path="res://src/UI/game_map.tscn" id="1_h5cua"]
[ext_resource type="Texture2D" uid="uid://dhdcrre50g3xm" path="res://assets/BG_scene/bg-03.png" id="2_21tdu"]
[ext_resource type="PackedScene" uid="uid://x8ukfuvvqph" path="res://src/entities/ash.tscn" id="2_w1o6o"]
[ext_resource type="Texture2D" uid="uid://pw46swk31c44" path="res://assets/BG_scene/bg-02.png" id="3_7b6xa"]
[ext_resource type="PackedScene" uid="uid://b5dgmqqaqyfji" path="res://HUD/hud.tscn" id="3_na14k"]
[ext_resource type="Texture2D" uid="uid://bjp1kwnmjmbs6" path="res://assets/BG_scene/bg-01.png" id="4_eo18k"]
[ext_resource type="PackedScene" uid="uid://cxg4t871uddd" path="res://src/UI/dialogue_control.tscn" id="5_e182c"]
[ext_resource type="Texture2D" uid="uid://cx4w8fo3tm3ss" path="res://assets/BG_scene/bg-00.png" id="5_qofyl"]
[ext_resource type="AudioStream" uid="uid://dqbxpdjowx64" path="res://Music/Pianata m-9702.mp3" id="6_fea2l"]
[ext_resource type="AudioStream" uid="uid://btcvv17dw6fnd" path="res://Music/Click.mp3" id="7_f0deo"]
[ext_resource type="AudioStream" uid="uid://c16xbob7alcxk" path="res://Music/Death.mp3" id="8_ie1cu"]
[ext_resource type="AudioStream" uid="uid://ccrl6qp1pi7bs" path="res://Music/Fire.mp3" id="9_lhfu7"]
[ext_resource type="AudioStream" uid="uid://cp7ljwi2ecwbv" path="res://Music/jump.mp3" id="10_phgi5"]
[ext_resource type="AudioStream" uid="uid://clc75kma44rr0" path="res://Music/Spine.mp3" id="11_52opm"]

[node name="GameScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3i20e")

[node name="parallax" type="Node2D" parent="."]
z_index = -1
position = Vector2(245, 418)

[node name="Sprite2D" type="Sprite2D" parent="parallax"]
unique_name_in_owner = true
position = Vector2(0, -45)
texture = ExtResource("2_21tdu")

[node name="Sprite2D2" type="Sprite2D" parent="parallax"]
unique_name_in_owner = true
position = Vector2(0, -30)
texture = ExtResource("3_7b6xa")

[node name="Sprite2D3" type="Sprite2D" parent="parallax"]
unique_name_in_owner = true
position = Vector2(0, -15)
texture = ExtResource("4_eo18k")

[node name="Sprite2D4" type="Sprite2D" parent="parallax"]
unique_name_in_owner = true
texture = ExtResource("5_qofyl")

[node name="greywall" type="ColorRect" parent="."]
unique_name_in_owner = true
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -245.0
offset_top = -248.0
offset_right = 245.0
offset_bottom = 246.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.223529, 0.223529, 0.223529, 1)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -249.0
offset_right = 14.0
offset_bottom = 263.0
grow_vertical = 2
color = Color(0.0784314, 0.0156863, 0.0470588, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -256.0
offset_bottom = 256.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.0784314, 0.0156863, 0.0470588, 1)

[node name="Game" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="GameMap" parent="Game" instance=ExtResource("1_h5cua")]
position = Vector2(229, 660)

[node name="ash" parent="Game" instance=ExtResource("2_w1o6o")]
unique_name_in_owner = true
position = Vector2(324, -1278)
floor_max_angle = 0.349066
floor_snap_length = 0.1

[node name="ColorRect3" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -163.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.0784314, 0.0156863, 0.0470588, 1)

[node name="ColorRect4" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 180.0
grow_horizontal = 2
color = Color(0.0784314, 0.0156863, 0.0470588, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -201.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.0784314, 0.0156863, 0.0470588, 1)

[node name="HUD" parent="." instance=ExtResource("3_na14k")]
unique_name_in_owner = true
layout_mode = 1

[node name="DialogueControl" parent="." instance=ExtResource("5_e182c")]
process_mode = 3
visible = false
z_index = 2
custom_minimum_size = Vector2(540, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -18.5
offset_right = 0.5
offset_bottom = 18.5
dialogue = "no time to see"
bg_color = Color(0, 0, 0, 0.768627)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_fea2l")
autoplay = true

[node name="Node" type="Node" parent="."]

[node name="click" type="AudioStreamPlayer" parent="Node"]
stream = ExtResource("7_f0deo")

[node name="death" type="AudioStreamPlayer" parent="Node"]
stream = ExtResource("8_ie1cu")

[node name="fire" type="AudioStreamPlayer" parent="Node"]
stream = ExtResource("9_lhfu7")

[node name="jump" type="AudioStreamPlayer" parent="Node"]
stream = ExtResource("10_phgi5")

[node name="spine" type="AudioStreamPlayer" parent="Node"]
stream = ExtResource("11_52opm")

[connection signal="new_level" from="Game/GameMap" to="." method="_to_new_level"]
[connection signal="got_hit" from="Game/ash" to="." method="_on_ash_got_hit"]
